Add base tag for relative URL resolution

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@transnovacoletivo" />
     <!-- <meta name="twitter:image" content="" /> -->
+    
+    <base href="./transnova" >
   </head>
 
   <body>
